--- a/nginx.conf
+++ b/nginx.conf
@@ -61,8 +61,8 @@ http {
         # Make sure your server block has following codes
         root /data;
         location / {
-#            auth_basic "Private Property";
-#            auth_basic_user_file /etc/nginx/.htpasswd;
+            auth_basic "Private Property";
+            auth_basic_user_file /etc/nginx/.htpasswd;
             # First attempt to serve request as file, then
             # as directory, then fall back to displaying a 404.
             try_files $uri $uri/ =404;
